added body directive

--- a/TODO
+++ b/TODO
@@ -1,26 +1,2 @@
-update docs: 
-@lib => @import
-filters -> builtins only base64 preserved
-optional
-query
-
-detect types in prompt
-
-==== OK
-@run file.req using {
-    key: value
-}
-
-==== OK
-all the directives + url + method can use "", '', `` or not surrounded strings
-@import "file"
-@run "file"
-@run `file${ext}` 
-@run file${ext} 
-
-==== OK
-@headers {
-    ...,
-    'Content-Type': 'application/json'
-}
-
+1. detect types in prompt
+2. @file directive - improve: support binary files
