--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 1. detect types in prompt
 2. @file directive - improve: support binary files
+3. use ansi-colors instead of chalk (same as enquirer)
